refactor: rely on domain guards and randomize final application status